// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailCounter renders a counter with a pluralized label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dsPxDL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hgvosH"
      >
        <div
          class="sc-jONnzC gFtvbQ sc-hlTwrV hKJolD"
        >
          <span
            aria-label="35 dogs"
            class="StyledText-sc-1sadyjn-0 iscINy"
          >
            35
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cQrzvg sc-leFFbm elbzUQ"
      >
        dogs
      </span>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailCounter renders a simple counter 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dsPxDL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hgvosH"
      >
        <div
          class="sc-jONnzC gFtvbQ sc-hlTwrV hKJolD"
        >
          <span
            aria-label="1 dog"
            class="StyledText-sc-1sadyjn-0 iscINy"
          >
            1
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cQrzvg sc-leFFbm elbzUQ"
      >
        dog
      </span>
    </div>
  </div>
</div>
`;
